# portfolio-backend

./: .env.example  .gitignore  build.ps1  build.sh  pyproject.toml  requirements.txt
api/: index.py
config/: settings.py  urls.py
core/: admin.py  content_defaults.py  content_serializers.py  content_views.py  forms.py  models.py  permissions.py  project_serializers.py  project_views.py  signals.py  utils.py  views.py
core/management/commands/: createsuperuser.py  populate_initial_content.py  populate_projects.py
core/migrations/: 0001_initial.py  0002_profile_about_description.py  0003_personasection_philosophyparagraph_technicalskill.py  0004_project_projectimage.py
static/admin/css/: portfolio_admin.css
templates/admin/: base_site.html
templates/admin/core/: profile.html
