[project]
name = "portfolio-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<6",
  "djangorestframework>=3.15,<4",
  "djangorestframework-simplejwt>=5.4,<6",
  "django-cors-headers>=4.6,<5",
  "django-storages>=1.14,<2",
  "django-cloudinary-storage>=0.3,<1",
  "cloudinary>=1.41,<2",
  "python-dotenv>=1.0,<2",
  "Pillow>=11,<12",
  "whitenoise>=6.7,<7",
  "dj-database-url>=2.2,<3",
  "psycopg2-binary>=2.9,<3",
]

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
build = "python manage.py migrate --noinput"
